--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-  margin-top: 4em;
+  margin-top: 1em;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -50,12 +50,13 @@ header > img{
     display: block;
     width: 6em;
     height: 6em;
-    border-radius: 50%;
+    border-radius: 100%;
 }
 
 header > h1 {
   display: inline-block;
   font-size: 0.8em;
+  font-weight: bold;
   border-radius: 1em;
   background: #fb2666e6;
   color: #ffffffe9;
@@ -79,9 +80,10 @@ ul > li {
   backdrop-filter: blur(10px) saturate(160%) contrast(180%);
   -webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
   border-radius: 10em;
-  padding: 0.65em 8em;
+  padding: 1em 3.5em;
   margin: 1.3em 0;
   box-shadow: rgb(28, 32, 93 / 24%) 0px 2px 8px 8px;
+  overflow: hidden;
 }
 
 ul > li > a {
@@ -90,7 +92,7 @@ ul > li > a {
   justify-content: center;
   align-items: center;
   gap: 0.5em;
-  letter-spacing: 4px;
+  letter-spacing: 1px;
 }
 
 a {
